# clock-desktop

./: README.md  app_log.txt  bun.lockb  package.json  tsconfig.json
.github/workflows/: release.yml
Download/clock-desktop.app/Contents/: Info.plist
clock-desktop/: bun.lockb  package.json
clock-desktop/Download/clock-desktop.app/Contents/Resources/: icon.icns
clock-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clock-desktop/src-tauri/capabilities/: default.json
clock-desktop/src/lib/components/: Clock.svelte
clock-desktop/src/routes/: +page.svelte
src-tauri/: Cargo.toml  LICENSE  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: main.rs
src/lib/components/: Calendar.svelte  Clock.svelte  Settings.svelte  Timer.svelte
src/routes/: +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
