[package]
name = "clock-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [
  "macos-private-api",
  "unstable",
] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2.0.0-rc.1"
